--- a/TicTacToe.cbp
+++ b/TicTacToe.cbp
@@ -41,6 +41,7 @@
 		<Unit filename="include/Common.h" />
 		<Unit filename="include/Core.h" />
 		<Unit filename="include/Element.h" />
+		<Unit filename="include/EvalDPairValue.h" />
 		<Unit filename="include/EvalOverGameRule.h" />
 		<Unit filename="include/EvalPairValue.h" />
 		<Unit filename="include/EvalSingleValue.h" />
@@ -50,12 +51,15 @@
 		<Unit filename="include/IRule.h" />
 		<Unit filename="include/IndexBoundRule.h" />
 		<Unit filename="include/IsExistRule.h" />
+		<Unit filename="include/MoveGenerator.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/AlphaBeta.cpp" />
 		<Unit filename="src/Board.cpp" />
 		<Unit filename="src/BoardView.cpp" />
 		<Unit filename="src/Common.cpp" />
 		<Unit filename="src/Core.cpp" />
 		<Unit filename="src/Element.cpp" />
+		<Unit filename="src/EvalDPairValue.cpp" />
 		<Unit filename="src/EvalOverGameRule.cpp" />
 		<Unit filename="src/EvalPairValue.cpp" />
 		<Unit filename="src/EvalSingleValue.cpp" />
@@ -65,6 +69,7 @@
 		<Unit filename="src/IRule.cpp" />
 		<Unit filename="src/IndexBoundRule.cpp" />
 		<Unit filename="src/IsExistRule.cpp" />
+		<Unit filename="src/MoveGenerator.cpp" />
 		<Unit filename="src/test/TestManager.cpp" />
 		<Extensions>
 			<code_completion />
